# paimon-full-text

./: Cargo.toml  DEPENDENCIES.rust.tsv  README.md  about.hbs  about.toml  deny.toml
.github/workflows/: ci.yml  release-java.yml  release-python-publish.yml  release-python.yml  release-rust.yml
core/: Cargo.toml  NOTICE
core/src/: index.rs  tokenizer.rs
core/tests/: core_roundtrip.rs
docs/: paimon-integration.md
docs/designs/: 2026-07-04-paimon-full-text-index.md
ffi/src/: lib.rs
java/: pom.xml
java/src/main/java/org/apache/paimon/index/fulltext/: FullTextIndexWriter.java
python/: pyproject.toml  setup.py
python/licenses/aarch64-apple-darwin/: LICENSE  THIRD-PARTY-LICENSES.html
python/licenses/aarch64-unknown-linux-gnu/: LICENSE  THIRD-PARTY-LICENSES.html
python/licenses/x86_64-pc-windows-msvc/: LICENSE  THIRD-PARTY-LICENSES.html
python/licenses/x86_64-unknown-linux-gnu/: LICENSE  THIRD-PARTY-LICENSES.html
python/paimon_ftindex/: writer.py
third-party-licenses/: README.md
tools/: README.md  check_license_headers.py  deploy_java_staging.sh  generate_license_reports.py  verify_java_jars.py  verify_python_wheels.py
