[workspace]
members = ["core", "ffi", "jni"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/apache/paimon-full-text"
rust-version = "1.86"

[workspace.dependencies]
anyhow = "1"
jni = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roaring = "0.11"
tantivy = "0.26"
tantivy-jieba = "0.20"
tempfile = "3"
thiserror = "1"
